Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30342

Wrong "Truncated incorrect DECIMAL value" warning/error in recent releases

    XMLWordPrintable

Details

    Description

      The below worked fine so far, as expected, but starts to throw unexpected

      ERROR 1292 (22007) at line 15: Truncated incorrect DECIMAL value: '#'
      

      in most recent releases. I looked over the 10.3.37 (lowest version release I can reproduce this on) release notes and changelog page, but could not find any change that seemed to be related to this change in behavior ...

      drop table if exists t1;
      drop table if exists t2;
       
      create table t1(c1 varchar(1));
      create table t2(c1 varchar(1));
       
      set session sql_mode = STRICT_TRANS_TABLES;
       
      insert into t1(c1) values('#');
       
      insert into t2(c1)
        select if(c1 = '#', c1 = 0, c1) as c1
        from t1;
      
      

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              hholzgra Hartmut Holzgraefe
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.25h
                  1.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.