MDEV-30342 Wrong "Truncated incorrect DECIMAL value" warning/error

regression from MDEV-29540 / 8c389393695.

INSERT SELECT errors needed to be unconditionally ignored.

As this touches the CREATE .. SELECT functionality, show
the equalivent test there.